# sims

./: .gitignore  .pre-commit-config.yaml  compose.yaml  pyproject.toml
.github/: CODEOWNERS
app/: manage.py
app/api/: urls.py
app/app/: settings.py  urls.py
deployment/local/: Dockerfile  compose.postgresql.yaml  compose.redis.yaml  entrypoint.sh
