[tool.poetry]
name = "sims"
version = "0.0.0"
package-mode = false
description = "sims (Self Inventory Management System)"
authors = ["Kookheon Kwon <kucuny@gmail.com>"]
readme = "README.md"

[tool.isort]
py_version = 312

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.format]
quote-style = "single"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
django-environ = "^0.11.2"
python-decouple = "^3.8"
django-ninja = "^1.3.0"
django-extensions = "^3.2.3"
psycopg = "^3.2.1"
redis = {extras = ["hiredis"], version = "^5.0.8"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
